Finish main/test compilation feature